# voxpanel-control

./: .gitignore  Makefile  config.py  main.py  piccolo_conf.py  pyproject.toml
control/: __init__.py  auth.py  exceptions.py  login.py  networking.py  packets.py  piccolo_app.py  standalone.py  tables.py
control/piccolo_migrations/: control_2026_07_11t12_04_52_545899.py
dev/: compose.yml  dev.env
tests/: test_agents.py  test_users.py
users/: __init__.py  exceptions.py  piccolo_app.py  tables.py
users/piccolo_migrations/: users_2026_07_06t08_15_44_777315.py  users_2026_07_07t13_18_46_748076.py
