[project]
name = "voxpanel-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "piccolo[postgres,sqlite]>=1.35.0",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath=["."]
